maze.shortestpath.ShortestPathMaze.scala.error
Erreur de compilation :
ShortestPathMaze:10: error: ')' expected but 'else' found.
  else {
  ^